...
            "state" : "translated",
            "value" : "アルバムアーティスト"
          }
        }
      }
    },
    "Albums" : {
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "アルバム"
          }
...
            "state" : "translated",
            "value" : "すべて（AND）"
          }
        }
      }
    },
    "All Songs" : {
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "すべての曲"
          }
...
            "state" : "translated",
            "value" : "内蔵プリセット"
          }
        }
      }
    },
    "Cancel" : {
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "キャンセル"
          }
...
            "state" : "translated",
            "value" : "メタデータを編集できるか確認中…"
          }
        }
      }
    },
    "Close" : {
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "閉じる"
          }
...
            "state" : "translated",
            "value" : "降順"
          }
        }
      }
    },
    "Details" : {
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "詳細"
          }
...
            "state" : "translated",
            "value" : "カラムを編集"
          }
        }
      }
    },
    "Edit Information…" : {
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "情報を編集…"
          }
...
            "state" : "translated",
            "value" : "歌詞を編集"
          }
        }
      }
    },
    "Edit Lyrics…" : {
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "歌詞を編集…"
          }
...
    },
    "EQ" : {
      "comment" : "A label for the equalizer.",
      "isCommentAutoGenerated" : true,
      "shouldTranslate" : false
    },
    "Equalizer" : {
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "イコライザー"
          }
...
            "state" : "translated",
            "value" : "メディアを取り込み中"
          }
        }
      }
    },
    "Info" : {
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "情報"
          }
...
            "state" : "translated",
            "value" : "弱"
          }
        }
      }
    },
    "Lyrics" : {
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "歌詞"
          }
...
            "state" : "translated",
            "value" : "保存中…"
          }
        }
      }
    },
    "Search" : {
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "検索"
          }
...
